--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 ̵̰̝ͩ̀ͫÇ͓̳̗͖͛ͤ̓͛̀͊̐̉͛O̬͉̲̭ͭ̍ͣ̚͠N̝̗̹̮ͦ͌ͭ̍̔͡Ţ̨̑ͥͮ͘E̩ͬ͒̑͝͞M̷̶̰̟͖̘̩͗ͣ͐̔ͫͭP̴̭̙̼̒ͮ̿͞O̵̫͔̿̉̽͐̅́R̙͉̩͕̩̹̻͕̳̈́͂A͚̙̮͕̦̞̺ͭ̽̀ͫͩ̽Ń̦̮̹̦͓̽̕E͓͂̽ͩ̄ͩ͌̉́̚͠Ǫ̶̺̤̺͓͔̖͖̯̃ͮͤ͋͞
             </h1>
             <div class="navigation-bar"><a href="/" aria-current="page" class="nav-link w--current">gALERÍA</a><a
-                    href="/about" class="nav-link">+iNFO</a></div>
+                    href="/about.html" class="nav-link">+iNFO</a></div>
             <div><a href="http://instagram.com/galeria.gascon" target="_blank"
                     class="social-icon-link w-inline-block"><img
                         src="https://uploads-ssl.webflow.com/6283cd27444b5922aa907da9/6283cd27444b59b81c907e0a_instagram-s.svg"
