--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                 alt="" sizes="(max-width: 767px) 95vw, (max-width: 991px) 728px, 940px"
                                 srcset="https://uploads-ssl.webflow.com/6283cd27444b593d5d907dba/62843bb77d6e4d83c1f878dd_rn-p-500.jpeg 500w, https://uploads-ssl.webflow.com/6283cd27444b593d5d907dba/62843bb77d6e4d83c1f878dd_rn-p-800.jpeg 800w, https://uploads-ssl.webflow.com/6283cd27444b593d5d907dba/62843bb77d6e4d83c1f878dd_rn-p-1080.jpeg 1080w, https://uploads-ssl.webflow.com/6283cd27444b593d5d907dba/62843bb77d6e4d83c1f878dd_rn-p-1600.jpeg 1600w, https://uploads-ssl.webflow.com/6283cd27444b593d5d907dba/62843bb77d6e4d83c1f878dd_rn-p-2000.jpeg 2000w, https://uploads-ssl.webflow.com/6283cd27444b593d5d907dba/62843bb77d6e4d83c1f878dd_rn-p-2600.jpeg 2600w, https://uploads-ssl.webflow.com/6283cd27444b593d5d907dba/62843bb77d6e4d83c1f878dd_rn-p-3200.jpeg 3200w, https://uploads-ssl.webflow.com/6283cd27444b593d5d907dba/62843bb77d6e4d83c1f878dd_rn.jpeg 6336w"
                                 class="main-image"></a><a href="/blog-posts/arte-contemporaneo"
-                            class="link-to-page">Descripcion + link</a></div>
+                            class="link-to-page">about</a></div>
                 </div>
             </div>
         </div>
@@ -138,7 +138,7 @@
                                 src="https://uploads-ssl.webflow.com/6283cd27444b5922aa907da9/62845819d5d457d2ff9003bf_lotticollgage-01.jpg"
                                 alt="" class="main-image"></a>
                         <p class="blog-content">Resumen</p><a href="/blog-posts/arte-contemporaneo"
-                            class="link-to-page">Read More</a>
+                            class="link-to-page">about</a>
                     </div>
                 </div>
             </div>
@@ -160,7 +160,7 @@
                                 src="https://uploads-ssl.webflow.com/6283cd27444b5922aa907da9/62845819bd9a94739e3ea10b_0.jpg"
                                 alt="" class="main-image"></a>
                         <p class="blog-content">Resumen</p><a href="/blog-posts/arte-contemporaneo"
-                            class="link-to-page">Read More</a>
+                            class="link-to-page">about</a>
                     </div>
                 </div>
             </div>
