--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
             <div class="content-wrapper w-dyn-list">
                 <div role="list" class="w-dyn-items">
                     <div data-w-id="19785638-f29d-a999-7d17-4574c45bc060" style="opacity: 0;" role="listitem"
-                        class="blog-post w-dyn-item"><a href="/blog-posts/arte-contemporaneo"
+                        class="blog-post w-dyn-item"><a href="/about"
                             class="post-link w-inline-block"><img
                                 src="https://uploads-ssl.webflow.com/6283cd27444b593d5d907dba/62843bb77d6e4d83c1f878dd_rn.jpeg"
                                 alt="" sizes="(max-width: 767px) 95vw, (max-width: 991px) 728px, 940px"
                                 srcset="https://uploads-ssl.webflow.com/6283cd27444b593d5d907dba/62843bb77d6e4d83c1f878dd_rn-p-500.jpeg 500w, https://uploads-ssl.webflow.com/6283cd27444b593d5d907dba/62843bb77d6e4d83c1f878dd_rn-p-800.jpeg 800w, https://uploads-ssl.webflow.com/6283cd27444b593d5d907dba/62843bb77d6e4d83c1f878dd_rn-p-1080.jpeg 1080w, https://uploads-ssl.webflow.com/6283cd27444b593d5d907dba/62843bb77d6e4d83c1f878dd_rn-p-1600.jpeg 1600w, https://uploads-ssl.webflow.com/6283cd27444b593d5d907dba/62843bb77d6e4d83c1f878dd_rn-p-2000.jpeg 2000w, https://uploads-ssl.webflow.com/6283cd27444b593d5d907dba/62843bb77d6e4d83c1f878dd_rn-p-2600.jpeg 2600w, https://uploads-ssl.webflow.com/6283cd27444b593d5d907dba/62843bb77d6e4d83c1f878dd_rn-p-3200.jpeg 3200w, https://uploads-ssl.webflow.com/6283cd27444b593d5d907dba/62843bb77d6e4d83c1f878dd_rn.jpeg 6336w"
-                                class="main-image"></a><a href="/blog-posts/arte-contemporaneo"
+                                class="main-image"></a><a href="/about"
                             class="link-to-page">about</a></div>
                 </div>
             </div>
@@ -132,12 +132,12 @@
                             <div class="byline-wrapper">
                                 <div class="byline-text">Joaquin LoNginotti</div>
                             </div>
-                        </div><a href="/blog-posts/arte-contemporaneo" class="post-link w-inline-block"><img
+                        </div><a href="/about" class="post-link w-inline-block"><img
                                 sizes="(max-width: 991px) 95vw, 940px"
                                 srcset="https://uploads-ssl.webflow.com/6283cd27444b5922aa907da9/62845819d5d457d2ff9003bf_lotticollgage-01-p-500.jpeg 500w, https://uploads-ssl.webflow.com/6283cd27444b5922aa907da9/62845819d5d457d2ff9003bf_lotticollgage-01-p-800.jpeg 800w, https://uploads-ssl.webflow.com/6283cd27444b5922aa907da9/62845819d5d457d2ff9003bf_lotticollgage-01-p-1080.jpeg 1080w, https://uploads-ssl.webflow.com/6283cd27444b5922aa907da9/62845819d5d457d2ff9003bf_lotticollgage-01.jpg 1182w"
                                 src="https://uploads-ssl.webflow.com/6283cd27444b5922aa907da9/62845819d5d457d2ff9003bf_lotticollgage-01.jpg"
                                 alt="" class="main-image"></a>
-                        <p class="blog-content">Resumen</p><a href="/blog-posts/arte-contemporaneo"
+                        <p class="blog-content">Resumen</p><a href="/about"
                             class="link-to-page">about</a>
                     </div>
                 </div>
@@ -154,12 +154,12 @@
                             <div class="byline-wrapper">
                                 <div class="byline-text">Juan Trevisi</div>
                             </div>
-                        </div><a href="/blog-posts/arte-contemporaneo" class="post-link w-inline-block"><img
+                        </div><a href="/about" class="post-link w-inline-block"><img
                                 sizes="(max-width: 991px) 95vw, 940px"
                                 srcset="https://uploads-ssl.webflow.com/6283cd27444b5922aa907da9/62845819bd9a94739e3ea10b_0-p-500.jpeg 500w, https://uploads-ssl.webflow.com/6283cd27444b5922aa907da9/62845819bd9a94739e3ea10b_0-p-800.jpeg 800w, https://uploads-ssl.webflow.com/6283cd27444b5922aa907da9/62845819bd9a94739e3ea10b_0.jpg 1100w"
                                 src="https://uploads-ssl.webflow.com/6283cd27444b5922aa907da9/62845819bd9a94739e3ea10b_0.jpg"
                                 alt="" class="main-image"></a>
-                        <p class="blog-content">Resumen</p><a href="/blog-posts/arte-contemporaneo"
+                        <p class="blog-content">Resumen</p><a href="/about"
                             class="link-to-page">about</a>
                     </div>
                 </div>
