--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 		<title>Aura</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/88/three.min.js"></script>
-		<script type="text/javascript" src="slider.js"></script>
+		//<script type="text/javascript" src="slider.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 
 	</head>
 <body>
-	
-		
+
 <script id="vertexShader" type="x-shader/x-vertex">
     void main() {
         gl_Position = vec4( position, 1.0 );
@@ -191,7 +190,7 @@
 <nav class="nav nav--left js-nav">
   <ul>
     <li>
-      <a href="#"><span>Link1</span></a>
+      <a href="about.html"><span>Link1</span></a>
     </li>
     <li>
       <a href="#"><span>Link2</span></a>
@@ -231,7 +230,7 @@
     <div class="slider__text js-slider__text">
       <div class="slider__text-line js-slider__text-line"><div>Exhibiting</div></div>
       <div class="slider__text-line js-slider__text-line"><div>YESTERDAY, TODAY</div></div>
-      <div class="slider__text-line js-slider__text-line"><div> AND TOMORROW'S</div></div>
+      <div class="slider__text-line js-slider__text-line"><div>AND TOMORROW'S</div></div>
       <div class="slider__text-line js-slider__text-line"><div>ARTS.</div></div>
     </div>
     
