--- a/index.html
+++ b/index.html
@@ -4,13 +4,67 @@
 		<title>Aura</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/88/three.min.js"></script>
-		//<script type="text/javascript" src="slider.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 
 	</head>
 <body>
 
-<script id="vertexShader" type="x-shader/x-vertex">
+
+<div id="container" touch-action="none"></div>
+
+<nav class="nav nav--left">
+  <ul>
+    <li>
+      <a href="about.html"><span>Link1</span></a>
+    </li>
+    <li>
+      <a href="1.html"><span>Link2</span></a>
+    </li>
+    <li>
+      <a href="2.html"><span>Link3</span></a>
+    </li>
+  </ul>
+</nav>
+
+<figure class="logo">
+  <a href="index.html"><img src="logo2.png"></a>
+</figure>
+
+<nav class="nav nav--right">
+  <ul>
+    <li><a href="https://twitter.com/Aura_NFTArt"><span>Twitter</span></a> </li>
+    <li><a href="https://www.instagram.com/aura.nft/"><span>Instagram</span></a> </li>
+	      <li><a href="https://aura-nft.medium.com/"><span>Medium</span></a> </li>
+  </ul>
+</nav>
+
+
+  
+  
+  <nav class="slider__nav">
+    <div class="slider-bullet">
+      <span class="slider-bullet__text">2021</span>
+      <span class="slider-bullet__line"></span>
+    </div>
+     <div class="slider-bullet">
+      <span class="slider-bullet__text">2022</span>
+      <span class="slider-bullet__line"></span>
+    </div>
+     <div class="slider-bullet">
+      <span class="slider-bullet__text">2023</span>
+      <span class="slider-bullet__line"></span>
+    </div>
+  </nav>
+  
+</div>
+
+<div class="vert-text">
+  <span>
+  NEXT EXHIBITION: March 2023
+</span>
+</div>
+	
+	<script id="vertexShader" type="x-shader/x-vertex">
     void main() {
         gl_Position = vec4( position, 1.0 );
     }
@@ -185,102 +239,6 @@
   }
 </script>
 
-<div id="container" touch-action="none"></div>
-
-<nav class="nav nav--left js-nav">
-  <ul>
-    <li>
-      <a href="about.html"><span>Link1</span></a>
-    </li>
-    <li>
-      <a href="#"><span>Link2</span></a>
-    </li>
-    <li>
-      <a href="#"><span>Link3</span></a>
-    </li>
-  </ul>
-</nav>
-
-<figure class="logo">
-  <img src="logo2.png">
-</figure>
-
-<nav class="nav nav--right">
-  <ul>
-    <li>
-    <a href="https://twitter.com/Aura_NFTArt">Twitter</a> </li>
-    <li>
-	<a href="https://www.instagram.com/aura.nft/">Instagram</a> </li>
-  </ul>
-</nav>
-
-<div class="slider js-slider">
-  <div class="slider__inner js-slider__inner"></div>
-  
-  <div class="slide js-slide">
-    <div class="slide__content">
-      <figure class="slide__img js-slide__img">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/58281/photo1.jpg">
-      </figure>
-       <figure class="slide__img js-slide__img">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/58281/photo2.jpg">
-      </figure>
-    </div>
-    
-    <div class="slider__text js-slider__text">
-      <div class="slider__text-line js-slider__text-line"><div>Exhibiting</div></div>
-      <div class="slider__text-line js-slider__text-line"><div>YESTERDAY, TODAY</div></div>
-      <div class="slider__text-line js-slider__text-line"><div>AND TOMORROW'S</div></div>
-      <div class="slider__text-line js-slider__text-line"><div>ARTS.</div></div>
-    </div>
-    
-  </div>
-  
-  <div class="slide js-slide">
-    <div class="slide__content">
-      <figure class="slide__img js-slide__img">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/58281/photo3.jpg">
-      </figure>
-       <figure class="slide__img js-slide__img">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/58281/photo4.jpg">
-      </figure>
-    </div>
-  </div>
-  
-  <div class="slide js-slide">
-    <div class="slide__content">
-      <figure class="slide__img js-slide__img">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/58281/photo5.jpg">
-      </figure>
-       <figure class="slide__img js-slide__img">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/58281/photo6.jpg">
-      </figure>
-    </div>
-  </div>
-  
-  <nav class="slider__nav js-slider__nav">
-    <div class="slider-bullet js-slider-bullet">
-      <span class="slider-bullet__text js-slider-bullet__text">01</span>
-      <span class="slider-bullet__line js-slider-bullet__line"></span>
-    </div>
-     <div class="slider-bullet js-slider-bullet">
-      <span class="slider-bullet__text js-slider-bullet__text">02</span>
-      <span class="slider-bullet__line js-slider-bullet__line"></span>
-    </div>
-     <div class="slider-bullet js-slider-bullet">
-      <span class="slider-bullet__text js-slider-bullet__text">03</span>
-      <span class="slider-bullet__line js-slider-bullet__line"></span>
-    </div>
-  </nav>
-  
-  <div class="scroll js-scroll">Scroll</div>
-  
-</div>
-
-<div class="vert-text">
-  <span>
-  NEXT EXHIBITION: March 2023
-</span>
-</div>
+	
 </body>
 </html>
